@@ -1,4 +1,8 @@
-$Id: CHANGES,v 1.51 2005/11/13 14:17:23 psavola Exp $
+$Id: CHANGES,v 1.52 2005/12/30 08:54:02 psavola Exp $
+
+12/30/2005	Fix a couple of  IPv6 Ready Logo Phase-2 IPv6 Core
+		Protocols Self Test issues, patches from Yoshifuji
+		Hideaki / USAGI.
 
 11/13/2005	Create a short FAQ in README file.
 
